# partial

./: Cargo.toml  README.md
src/libpartial/: environment.rs  lib.rs
