[package]

name = "partial"
version = "0.2.1"
authors = [ "Pierre Talbot <ptalbot@hyc.io>" ]

description = "Optional monad with fake variant."
repository = "https://github.com/ptal/partial"
documentation = "https://docs.rs/partial"
readme = "README.md"
keywords = ["result", "monad", "compiler"]
categories = ["data-structures"]
license = "Apache-2.0"

[lib]

name = "partial"
path = "src/libpartial/lib.rs"

[badges]
travis-ci = { repository = "ptal/partial" }
